--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
+    "noPropertyAccessFromIndexSignature": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
@@ -21,6 +21,7 @@
     "strictPropertyInitialization": false,
     "noImplicitAny": false,
     "strictNullChecks": false,
+    "skipLibCheck": true,
     "lib": [
       "es2020",
       "dom"
